[package]
name = "pg_bigdecimal"
description = "Postgres' numeric <=> Rust's BigDecimal"
readme = "README.md"
repository = "https://github.com/tzConnectBerlin/rust-pg_bigdecimal"
version = "0.1.5"
authors = ["Rick Klomp <rick.klomp@tzconnect.com>"]
edition = "2021"
license = "MIT"
keywords = ["postgres", "pg", "numeric", "bigdecimal"]
categories = ["database"]
include = ["/src", "/test_with_tempdb.bash"]
publish = true

[dependencies]
bigdecimal = "0.4"
byteorder = "1"
bytes = "1"
num-bigint = "0.4"
num-integer = "0.1"
postgres-types = {version = "0.2.6"}

[dev-dependencies]
postgres = "0.19"
